k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: regalme/multi-client
          ports:
            - containerPort: 3000
